--- a/doc/logit.Rnw
+++ b/doc/logit.Rnw
@@ -131,14 +131,14 @@ llfun <- function(mu, sigma, n1=60, n0=40, log=TRUE) {
 	ll
 }
 
-muvec <- seq(0.35, 1, by=0.01)
+muvec <- seq(0.35, 3, by=0.05)
 sigmavec <- exp(seq(log(1), log(10), length.out=100))
 
 contour(muvec, sigmavec, apply2d(llfun, muvec, sigmavec),
 		xlab=expression(mu),
 		ylab=expression(sigma),
 		main="log (marginal) likelihood surface",
-		levels=c(-67.31, -67.4, -68, 70))
+		levels=c(-67.31, -67.4, -68, -70, -80))
 @
 
 We can see that there's a relatively flat region starting from $\sigma \approx 0$ and $\mu \approx 0.5$ (see line -67.31).
